crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__bond_chain-3.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: nonexistent_residue
expression: out
---
  × residue 4 could not be found in the current polymer
  help: this residue may belong to another polymer, or may have been
        previously deleted from this one
