crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__bond_residues-3.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: acceptor_not_in_polymer
expression: out
---
  × residue 3 could not be found in the current polymer
  help: this residue may belong to another polymer, or may have been
        previously deleted from this one
