crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__bond_residues-4.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: no_matching_groups
expression: out
---
  × failed to form Peptide bond between residue 1 (Alanine) and residue 3 (N-
  │ Acetylglucosamine) due to an issue with the acceptor
  ╰─▶   × no functional groups on residue 3 matched the target "Amino" at="N-
        │ Terminal"
