crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__bond_residues-5.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: nonexistent_bond
expression: out
---
  × the bond "Super" could not be found in the supplied polymer database
