crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__localize_modification-2.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: already_localized_offset
expression: out
---
  × failed to localize modification 8 since it was already localized as an
  │ offset modification
  help: to localize a modification, it must start unlocalized
